changes made to fix inconsistencies that occured due to the overflow addition to certain pages

--- a/src/components/4.Skills/skills.css
+++ b/src/components/4.Skills/skills.css
@@ -4,6 +4,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: auto;
+    overflow-y: hidden;
 }
 
 #skills-text{
