--- a/src/components/5.Projects/projects.css
+++ b/src/components/5.Projects/projects.css
@@ -1,7 +1,7 @@
 #projects{
     background-image: linear-gradient(rgba(214, 208, 200, 1), grey );
     transition: all .45s ease;
-    
+    overflow-y: hidden;
     flex-direction: column;
 }
 
@@ -80,7 +80,7 @@
 }
 
 #card:hover #hover{
-    height: 30%;
+    height: 35%;
     transition: all .45s ease;
     
     
@@ -111,12 +111,12 @@
 @media (max-width: 570px) {
     #project-container{
         grid-template-columns: 100%;
-        height: auto; 
+        height: 100%; 
     
     }
 
     #projects{
-        height: auto;
+        height: 1300px;
         background-color: green;
     }
     
